--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
 </body>
     <script src="bower_components/react/react.js"></script>
     <script src="bower_components/react/JSXTransformer.js"></script>
-    <script src="main.js"></script>
+    <script src="main.jsx"></script>
