--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <body>
-	
+	<section>
+		<div id='mount_1'></div>
+	</section>
 </body>
     <script src="bower_components/react/react.js"></script>
     <script src="bower_components/react/JSXTransformer.js"></script>
-    <script src="main.jsx"></script>
+    <script type="text/jsx" src="1_simple_render.jsx"></script>
