--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 	<section>
 		<div id='mount_1'></div>
 	</section>
+
+	<section>
+		<div id='mount_2'></div>
+	</section>
 </body>
     <script src="bower_components/react/react.js"></script>
     <script src="bower_components/react/JSXTransformer.js"></script>
     <script type="text/jsx" src="1_simple_render.jsx"></script>
+    <script type="text/jsx" src="2_stateful.jsx"></script>
