--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 	<section>
 		<div id='mount_3'></div>
 	</section>
+
+	<section>
+		<div id='mount_4'></div>
+	</section>
 </body>
 
 <script src="bower_components/react/react.js"></script>
@@ -17,3 +21,4 @@
 <script type="text/jsx" src="1_simple_render.jsx"></script>
 <script type="text/jsx" src="2_stateful.jsx"></script>
 <script type="text/jsx" src="3_application.jsx"></script>
+<script type="text/jsx" src="4_reddit.jsx"></script>
