no 4 in progress

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <script src="bower_components/react/react.js"></script>
 <script src="bower_components/react/JSXTransformer.js"></script>
-<script type="text/jsx" src="1_simple_render.jsx"></script>
+<!-- <script type="text/jsx" src="1_simple_render.jsx"></script>
 <script type="text/jsx" src="2_stateful.jsx"></script>
 <script type="text/jsx" src="3_application.jsx"></script>
-<script type="text/jsx" src="4_reddit.jsx"></script>
+ --><script type="text/jsx" src="4_reddit.jsx"></script>
